--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.0",
+    "ng-bootstrap-form-validation": "^5.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
