--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon index.js",
     "client-install": "npm install --prefix client",
-    "client": "npm run watch --prefix client",
+    "client": "npm run watch --prefix ../client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
